src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;700&display=swap');

:root {
  --green-primary: #27ae60;
  --green-light: #5ff19c;
  --black-primary: #000;
  --dark-blue: #273e60;
  --gray: #999;
  --gray-shadow: #0000001a;
  --bg-black: #0000000d;
  --white: #FFF;
  --big-title-size: 40px;
  --mid-title-size: 30px;
  --little-title-size: 20px;
  --text-size: 12px;
}

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

html {
  scroll-behavior: smooth;
}

.approot {
  display: flex;
  flex-flow: column nowrap;
  width: 100vw;
  min-height: 100vh;
  overflow-x: hidden;
}

.big-title {
  font-size: var(--big-title-size);
  color: var(--black-primary);
  /* margin: 0;
  padding: 0; */
}

.big-dark-blue-title {
  font-size: var(--mid-title-size);
  color: var(--dark-blue);
  text-transform: uppercase;
  /* margin: 0;
  padding: 0; */
}

.mid-title {
  font-size: var(--mid-title-size);
  color: var(--green-primary);
}

.little-title {
  font-size: var(--little-title-size);
  color: var(--black-primary);
}

.little-title-gray {
  font-size: var(--little-title-size);
  color: var(--gray);
}

.txt {
  font-size: var(--text-size);
  color: var(--black-primary);
}

.big-button {
  margin-top: 20px;
  width: fit-content;
  padding: 5px 10px;
  background-color: #000;
  border: 0;
  transition: 0.5s;
  position: relative;
  cursor: pointer;
}

.white-link {
  text-decoration: 0;
  color: #fff;
  font-weight: bold;
  text-transform: uppercase;
  transition: 0.5s;
}

